// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabChoice should render TabChoice component 1`] = `
<DocumentFragment>
  <div
    class="centered-flex py-4"
  >
    <button
      class="fs-2 bg-default py-2 px-5 tab-choice"
      type="button"
    >
      One
    </button>
  </div>
  <h1>
    Hello
  </h1>
</DocumentFragment>
`;

exports[`TabChoice should render empty div 1`] = `
<DocumentFragment>
  <div
    class="centered-flex py-4"
  />
</DocumentFragment>
`;

exports[`TabChoice when tab is clicked should show the clicked tab component 1`] = `
<DocumentFragment>
  <div
    class="centered-flex py-4"
  >
    <button
      class="fs-2 bg-default py-2 px-5 tab-choice"
      type="button"
    >
      One
    </button>
    <button
      class="fs-2 bg-default py-2 px-5 tab-choice"
      type="button"
    >
      Two
    </button>
  </div>
  <h1>
    Hello
  </h1>
</DocumentFragment>
`;

exports[`TabChoice when tab is clicked should show the clicked tab component 2`] = `
<DocumentFragment>
  <div
    class="centered-flex py-4"
  >
    <button
      class="fs-2 bg-default py-2 px-5 tab-choice"
      type="button"
    >
      One
    </button>
    <button
      class="fs-2 bg-default py-2 px-5 tab-choice"
      type="button"
    >
      Two
    </button>
  </div>
  <h1>
    World
  </h1>
</DocumentFragment>
`;
